Add codes to load data set file

--- a/project.ipynb
+++ b/project.ipynb
@@ -13,7 +13,13 @@
    "id": "2a4a94b3",
    "metadata": {},
    "source": [
-    "TODO: In this cell, write an explanation of which dataset you have chosen and why it is appropriate for this task"
+    "TODO: In this cell, write an explanation of which dataset you have chosen and why it is appropriate for this task\n",
+    "\n",
+    "## I have chosen the local CSV files as my dataset for these reasons: \n",
+    "\n",
+    "1. The information seams quite clean and tidy, hence I can retrieve the important data I need without much work for cleaning up.\n",
+    "2. The dataset files are very samll which makes they can be shared easily (e.g. use for another project).\n",
+    "3. Owning these dataset file means that we can amend/edit them as needed (e.g. we can add new records or correct some info within these files)"
    ]
   },
   {
@@ -28,19 +34,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c69b83a1",
+   "execution_count": 21,
+   "id": "4478e787-9898-442e-9dbf-bcbdb7dc780a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "c69b83a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Medium</th>\n",
+       "      <th>Setting</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Emily</td>\n",
+       "      <td>A young woman in her early 20s, Emily is an as...</td>\n",
+       "      <td>Play</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jack</td>\n",
+       "      <td>A middle-aged man in his 40s, Jack is a succes...</td>\n",
+       "      <td>Play</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>A woman in her late 30s, Alice is a warm and n...</td>\n",
+       "      <td>Play</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tom</td>\n",
+       "      <td>A man in his 50s, Tom is a retired soldier and...</td>\n",
+       "      <td>Play</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sarah</td>\n",
+       "      <td>A woman in her mid-20s, Sarah is a free-spirit...</td>\n",
+       "      <td>Play</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name                                        Description Medium  Setting\n",
+       "0  Emily  A young woman in her early 20s, Emily is an as...   Play  England\n",
+       "1   Jack  A middle-aged man in his 40s, Jack is a succes...   Play  England\n",
+       "2  Alice  A woman in her late 30s, Alice is a warm and n...   Play  England\n",
+       "3    Tom  A man in his 50s, Tom is a retired soldier and...   Play  England\n",
+       "4  Sarah  A woman in her mid-20s, Sarah is a free-spirit...   Play  England"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "# load the original csv file \n",
+    "CSV_FILE_NAME = \"character_descriptions\"\n",
+    "CSV_FILE_EXE = \".csv\"\n",
+    "\n",
+    "origin_df = pd.read_csv(CSV_FILE_NAME + CSV_FILE_EXE) \n",
+    "origin_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "0a595980",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A young woman in her early 20s, Emily is an as...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A middle-aged man in his 40s, Jack is a succes...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A woman in her late 30s, Alice is a warm and n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A man in his 50s, Tom is a retired soldier and...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A woman in her mid-20s, Sarah is a free-spirit...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text\n",
+       "0  A young woman in her early 20s, Emily is an as...\n",
+       "1  A middle-aged man in his 40s, Jack is a succes...\n",
+       "2  A woman in her late 30s, Alice is a warm and n...\n",
+       "3  A man in his 50s, Tom is a retired soldier and...\n",
+       "4  A woman in her mid-20s, Sarah is a free-spirit..."
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pandas import DataFrame \n",
+    "\n",
+    "# copy all the descriptions from the original csv file into the 'text' column\n",
+    "my_df = DataFrame()\n",
+    "my_df[\"text\"] = origin_df[\"Description\"]\n",
+    "my_df.head()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -62,19 +241,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "582f0656",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# OpenAI setups\n",
+    "\n",
+    "from openai import OpenAI\n",
+    "import openai\n",
+    "\n",
+    "openai.api_key = OPENAI_API_KEY\n",
+    "ai_client = OpenAI()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "8b6e1f75",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# Create embeddings record for each text row \n",
+    "\n",
+    "EMBEDDING_MODEL_NAME = \"text-embedding-ada-002\"\n",
+    "\n",
+    "def get_embedding(text, model=EMBEDDING_MODEL_NAME):\n",
+    "   text = text.replace(\"\\n\", \" \")\n",
+    "   return ai_client.embeddings.create(input = [text], model=model).data[0].embedding\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
