Add functions to generate embeddings and cosine distance. Compare results of two questions.

--- a/project.ipynb
+++ b/project.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "4478e787-9898-442e-9dbf-bcbdb7dc780a",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "c69b83a1",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "4  Sarah  A woman in her mid-20s, Sarah is a free-spirit...   Play  England"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "0a595980",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "4  A woman in her mid-20s, Sarah is a free-spirit..."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "582f0656",
    "metadata": {},
    "outputs": [],
@@ -257,38 +257,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "8b6e1f75",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings are ready.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Create embeddings record for each text row \n",
     "\n",
     "EMBEDDING_MODEL_NAME = \"text-embedding-ada-002\"\n",
     "\n",
-    "def get_embedding(text, model=EMBEDDING_MODEL_NAME):\n",
+    "def get_embedding(str, model=EMBEDDING_MODEL_NAME):\n",
     "   text = text.replace(\"\\n\", \" \")\n",
     "   return ai_client.embeddings.create(input = [text], model=model).data[0].embedding\n",
     "\n",
-    "\n"
+    "\n",
+    "my_df[\"embeddings\"] = my_df.text.apply(lambda x: get_embedding(x))\n",
+    "\n",
+    "print(\"Embeddings are ready.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "13f2dcd7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the embeddings records to a seperate CSV file\n",
+    "\n",
+    "EMBEDDINGS_FILE_NAME = CSV_FILE_NAME + \"_embeddings\" + CSV_FILE_EXE\n",
+    "my_df.to_csv(EMBEDDINGS_FILE_NAME)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "c403f543",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tiktoken\n",
+    "from scipy.spatial.distance import cosine\n",
+    "\n",
+    "# define a tokenizer \n",
+    "tokenizer = tiktoken.get_encoding(\"cl100k_base\")\n",
+    "\n",
+    "MAX_TOKEN_COUNT = 1024\n",
+    "\n",
+    "\n",
+    "# Return a new DataFrame with a new 'distances' column based on the question\n",
+    "def make_distances_df_with(question: str, \n",
+    "                           df: DataFrame):\n",
+    "    \n",
+    "    question_embeddings = get_embedding(question)\n",
+    "\n",
+    "    new_df = df.copy()\n",
+    "    new_df[\"distances\"] = new_df[\"embeddings\"].apply(lambda x: cosine(question_embeddings, x))\n",
+    "    new_df.sort_values(by=\"distances\", ascending=True, inplace=True)\n",
+    "    return new_df\n",
+    "    \n",
+    "\n",
+    "# Create a custom prompt based on the provided question and a dataframe: df, \n",
+    "# the df should have a 'distances' column, which records the cosine distance for each row's text against the question\n",
+    "def create_custom_prompt(question: str, \n",
+    "                         df: DataFrame, \n",
+    "                         max_token_count: int = MAX_TOKEN_COUNT):\n",
+    "    \n",
+    "    # Count the number of tokens in the prompt template and question\n",
+    "    prompt_template = \"\"\"\n",
+    "Answer the question based on the context below, and if the question\n",
+    "can't be answered based on the context, say \"I don't know\"\n",
+    "\n",
+    "Context: \n",
+    "\n",
+    "{}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Question: {}\n",
+    "Answer:\"\"\"\n",
+    "\n",
+    "    current_token_count = len(tokenizer.encode(prompt_template)) + \\\n",
+    "                            len(tokenizer.encode(question))\n",
+    "\n",
+    "    context = []\n",
+    "    for text in df[\"text\"].values:\n",
+    "\n",
+    "        # Increase the counter based on the number of tokens in this row\n",
+    "        text_token_count = len(tokenizer.encode(text))\n",
+    "        current_token_count += text_token_count\n",
+    "\n",
+    "        # Add the row of text to the list if we haven't exceeded the max\n",
+    "        if current_token_count <= max_token_count:\n",
+    "            context.append(text)\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    return prompt_template.format(\"\\n\\n###\\n\\n\".join(context), question)\n",
+    "\n",
+    "    \n",
+    "# Query openAI with a prompt and get the response\n",
+    "def query_openAI_with(prompt: str): \n",
+    "    response = ai_client.chat.completions.create(\n",
+    "      model=\"gpt-3.5-turbo\",\n",
+    "      messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant who is familiar with all characters from movies, TV shows, Play, Limited Series, Musical, Reality Show, Opera & Sitcom.\"},\n",
+    "        {\"role\": \"user\", \"content\": prompt}\n",
+    "      ]\n",
+    "    )\n",
+    "    return response.choices[0].message.content\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -318,19 +406,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "4901c850",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answering before providing more context:\n",
+      "That character is Buck Vu from the TV show \"Station 19.\" He is a former soldier who served in Afghanistan and is Ava's godson in the series.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Answer before providing more context\n",
+    "\n",
+    "origin_question_1 = \"Which character was a former soldier served in Afghanistan before and is Ava's Godson?\"\n",
+    "\n",
+    "print(\"Answering before providing more context:\")\n",
+    "print(query_openAI_with(prompt=origin_question_1))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "bd7a093b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answering after providing more context:\n",
+      "Max is the character who was a former soldier served in Afghanistan before and is Ava's godson.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Answer after providing more context \n",
+    "\n",
+    "distance_df = make_distances_df_with(question=origin_question_1, df=my_df)\n",
+    "\n",
+    "prompt_question = create_custom_prompt(question=origin_question_1, \n",
+    "                                       df=distance_df)\n",
+    "\n",
+    "print(\"Answering after providing more context:\")\n",
+    "print(query_openAI_with(prompt=prompt_question))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,16 +467,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "6f646989",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answering before providing more context: \n",
+      "The character you're looking for is Lorelai Gilmore from the TV show \"Gilmore Girls.\" She is a single mother and the manager of the Independence Inn in the fictional town of Stars Hollow, Connecticut. Lorelai is known for her wit, charm, and close relationship with her daughter, Rory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Answer before providing more context\n",
+    "\n",
+    "origin_question_2 = \"Which character is a single mother running business in Texas town?\"\n",
+    "print(\"Answering before providing more context: \")\n",
+    "print(query_openAI_with(prompt=origin_question_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "11c07a54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answering after providing more context:\n",
+      "Maria, the middle-aged Latina woman in her 40s, is the single mother running a small family-run diner in a small Texas town.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Answer after providing more context \n",
+    "\n",
+    "distance_df_2 = make_distances_df_with(question=origin_question_2, df=my_df)\n",
+    "\n",
+    "prompt_question_2 = create_custom_prompt(question=origin_question_2, \n",
+    "                                         df=distance_df_2)\n",
+    "\n",
+    "print(\"Answering after providing more context:\")\n",
+    "print(query_openAI_with(prompt=prompt_question_2))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c07a54",
+   "id": "281bba43-9b43-48ee-83a6-7a55dfd47a3b",
    "metadata": {},
    "outputs": [],
    "source": []
