Improve reasoning of choosing the dataset.

--- a/project.ipynb
+++ b/project.ipynb
@@ -15,11 +15,12 @@
    "source": [
     "TODO: In this cell, write an explanation of which dataset you have chosen and why it is appropriate for this task\n",
     "\n",
-    "## I have chosen the local CSV files as my dataset for these reasons: \n",
+    "## I have chosen the local CSV file (character_descriptions.csv) as my dataset for these reasons: \n",
     "\n",
-    "1. The information seams quite clean and tidy, hence I can retrieve the important data I need without much work for cleaning up.\n",
-    "2. The dataset files are very samll which makes they can be shared easily (e.g. use for another project).\n",
-    "3. Owning these dataset file means that we can amend/edit them as needed (e.g. we can add new records or correct some info within these files)"
+    "1. Relevance and Domain Specificity: as I am building a ChatBot about characters from theater, television and films, this CSV contains rich and extended information for this subject thus making it most relevent to my task.\n",
+    "2. The Quality of Data: the information in this file seams well structured, clean and tidy, hence I can retrieve the important data I need without much work for cleaning up.\n",
+    "3. Domain Variety: this file covered characters for movies, TV shows, Play, Limited Series, Musical, Reality Show, Opera & Sitcom, which seams a good variety of characters.\n",
+    "4. Legal and Licensing: all information from this file was invented by an openAI model, which means it's free to use and won't cause any legal/copyright issues. \n"
    ]
   },
   {
